# anime-calendar-syncer

./: .gitignore  README.md  pyproject.toml
anime_syncer/: anime.py  auth.py  calendar_sync.py  cli.py  config.py
