[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-syncer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "caldav>=1.3",
    "icalendar>=5.0",
    "pytz>=2024.1",
]

[project.scripts]
anime-syncer = "anime_syncer.cli:cli"
